Updated package.json to auto push after versioning

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "push": "git push github master",
     "build": "babel lib -d dist",
-    "version": "npm run build"
+    "version": "npm run build",
+    "postversion": "npm run push"
   },
   "engines": {
     "node": ">=6.0.0"
